# LGeneral-Deluxe

./: .gitattributes  .kateconfig  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  Makefile.in  PanzerGeneral-Guru.txt  README.i18n  README.lgc-pg  README.lgeneral  README.md  README.redit  TODO  acconfig.h  autogen.sh  cmake_config.h.in  cmake_define.h.in  config.h.in  configure.in  lgeneral.desktop  lgeneral.desktop.in  valgrind-lgeneral.supp
cmake/modules/: FindGit.cmake  FindSDL2.cmake  GettextTranslate.cmake
codeblocks/: lgeneral.cbp  lgeneral.depend  lgeneral.rc
codeblocks/nsis/: lgeneral.nsi
data/Default/Scenario/: basic_unit_data.udb  equipment.pgeqp  nations.lgdndb  nations.ndb  terrain.lgdtdb
data/lgeneral-pg/Graphics/terrain/: Makefile.am
data/lgeneral-pg/Graphics/units/: Makefile.am
data/lgeneral-pg/Scenario/: .order  Anvil.lgdscn  Anvil.lgscn  Anzio.lgdscn  Anzio.lgscn  Ardennes.lgdscn  Ardennes.lgscn  Balkans.lgdscn  Balkans.lgscn  Barbarossa.lgdscn  Barbarossa.lgscn  Berlin.lgdscn  Berlin.lgscn  BerlinEast.lgdscn  BerlinEast.lgscn  BerlinWest.lgdscn  BerlinWest.lgscn  Budapest.lgdscn  Budapest.lgscn  Byelorussia.lgdscn  Byelorussia.lgscn  Caucasus.lgdscn  Caucasus.lgscn  Cobra.lgdscn  Cobra.lgscn  Crete.lgdscn  Crete.lgscn  D-Day.lgdscn  D-Day.lgscn  EarlyMoscow.lgdscn  EarlyMoscow.lgscn  ElAlamein.lgdscn  ElAlamein.lgscn  France.lgdscn  France.lgscn  Husky.lgdscn  Husky.lgscn  Kharkov.lgdscn  Kharkov.lgscn  Kiev.lgdscn  (+115 more)
dependencies/: readme.txt
include/: readme.txt
intl/: Makefile.in  cat-compat.c
lgc-pg/: Makefile.am  Makefile.in  lgc-pg.1  list.c  main.c  maps.c  maps.h  misc.c  misc.h  nations.c  nations.h  parser.c  scenarios.c  scenarios.h  shp.c  shp.h  shptool.c  terrain.c  terrain.h  units.c  units.h
lgc-pg/convdata/: COPYING  Makefile.am  Makefile.in  mapnames  reinf
lged/: Makefile.am  Makefile.in  README  lged.c
lgeneral-redit/: AUTHORS  ChangeLog  Makefile.am  README  config.h.in  configure.in  editor.glade  mkinstalldirs
lgeneral-redit/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  list.c  list.h  main.c  misc.c  misc.h  parser.c  parser.h  reinf.rc
lib/: readme.txt
old_formats/: PG.lgcam  nations.ndb  terrain.tdb
old_formats/maps/: map01.lgmap  map03.lgmap  map07.lgmap  map08.lgmap  map09.lgmap  map10.lgmap  map12.lgmap  map15.lgmap  map22.lgmap  map23.lgmap  map24.lgmap  map25.lgmap  map31.lgmap  map32.lgmap  map33.lgmap  map37.lgmap
old_formats/scenarios/: Ardennes.lgscn  Balkans.lgscn  Barbarossa.lgscn  BerlinWest.lgscn  Byelorussia.lgscn  Caucasus.lgscn  Crete.lgscn  Husky.lgscn  Kharkov.lgscn  Kiev.lgscn  Kursk.lgscn  LowCountries.lgscn  Norway.lgscn  Poland.lgscn  SealionPlus.lgscn  Sevastapol.lgscn  Stalingrad.lgscn  Torch.lgscn  Washington.lgscn
po/: Makefile.am  Makefile.in  POTFILES.in  README
po/lgeneral/: Makefile.in  Makefile.in.in  POTFILES.in  de.po  en.po
po/pg/: Makefile.in  Makefile.in.in  de.po  en.po  pg-translations.c  pg.pot
src/: CMakeLists.txt  Makefile.am  Makefile.in  action.c  action.h  ai.c  ai.h  ai_group.c  ai_group.h  ai_tools.c  ai_tools.h  audio.c  audio.h  campaign.c  campaign.h  config.c  config.h  date.c  date.h  engine.c  engine.h  event.c  event.h  file.c  file.h  gui.c  gui.h  headquarters_dlg.c  headquarters_dlg.h  image.c  image.h  lgeneral.6  lgeneral.h  list.c  list.h  main.c  map.c  map.h  message_dlg.c  message_dlg.h  (+26 more)
src/FPGE/: fpge.h  load.h  pg.c  pg.h  pgf.c  pgf.h
src/ai_modules/: Makefile.am  Makefile.in
src/campaigns/: Makefile.am  Makefile.in  PG
src/gfx/: Makefile.am  Makefile.in
src/gfx/flags/: Makefile.am  Makefile.in
src/gfx/terrain/: Makefile.in
src/gfx/units/: Makefile.in
src/maps/: Makefile.am  Makefile.in  map09  map12  map15  map17  map19  map20  map22  map23  map28  map29  map35  pg.tdb
src/maps/pg/: map01  map03  map05  map06  map07  map10  map14  map16  map21  map25  map26  map27  map30  map33  map37
src/music/: Makefile.am  Makefile.in
src/nations/: Makefile.am  Makefile.in  pg.ndb
src/scenarios/: Balkans  Berlin  BerlinWest  Caucasus  Crete  Kharkov  LowCountries  Makefile.am  Makefile.in  MarketGarden  MiddleEast  Moscow41  NorthAfrica  Norway  Sealion43  Sevastapol  Torch
src/scenarios/pg/: Anvil  Anzio  Ardennes  Balkans  Barbarossa  Berlin  BerlinEast  BerlinWest  Budapest  Byelorussia  Caucasus  Cobra  Crete  D-Day  EarlyMoscow  ElAlamein  France  Husky  Kharkov  Kiev  Kursk  LowCountries  MarketGarden  MiddleEast  Moscow41  Moscow42  Moscow43  NorthAfrica  Norway  Poland  Poland.bak  Sealion40  Sealion43  SealionPlus  Sevastapol  Stalingrad  Torch  Warsaw  Washington
src/sounds/: Makefile.am  Makefile.in
src/terrain/: Makefile.am  Makefile.in
src/themes/: Makefile.in
src/themes/default/: COPYING  Makefile.am  Makefile.in
src/units/: Makefile.am  Makefile.in  pg.udb
tools/: Makefile.am  Makefile.in
tools/ltrextract/: Makefile.am  Makefile.in  README  campaign.c  campaign.h  ltrextract.c  map.c  map.h  nation.c  nation.h  scenario.c  scenario.h  terrain.c  terrain.h  unit_lib.c  unit_lib.h  util.c  util.h
util/: Makefile.am  Makefile.in  hashtable.c  hashtable.h  hashtable_itr.c  hashtable_private.h  hashtable_utility.c  localize.c  localize.h  paths-linux.c  paths.c  paths.h  portability.c
