convdatadir = $(inst_dir)/convdata
convdata_DATA = \
crosshair.bmp damage_bars.bmp fog.bmp grid.bmp select_frame.bmp \
strength.bmp air2.wav air.wav leg.wav sea.wav wheeled.wav tracked.wav \
battle.wav attack.bmp move.bmp select.wav reinf danger.bmp \
guard.bmp title.bmp mapnames

EXTRA_DIST = $(convdata_DATA)

